--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,6 +3,17 @@
 @inject BooksService BookService
 <MudText Typo="Typo.h6">Entdecke neue Bücher</MudText>
 
+<AuthorizeView>
+    <Authorized>
+        @foreach (var claim in context.User.Claims)
+        {
+            <MudText>@claim.Type | @claim.Value</MudText>
+        }
+        
+        <MudButton OnClick="LoadRecommended">Lade Recommended</MudButton>
+    </Authorized>
+</AuthorizeView>
+
 <MudGrid Spacing="2" Justify="Justify.Center">
     @if (Books != null && Books.TotalItems > 0)
     {
@@ -24,11 +35,19 @@
 
 @code{
 
+    public Volumes? Recommended { get; set; }
+
+
     protected override async Task OnInitializedAsync()
     {
-        Books = await BookService.Volumes.Recommended.;
+            
     }
 
     public Volumes? Books { get; set; }
+
+    private async Task LoadRecommended()
+    {
+        Recommended = await BookService.Volumes.Recommended.List().ExecuteAsync();
+    }
 
 }
