--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,51 +3,41 @@
 @inject BooksService BookService
 <MudText Typo="Typo.h6">Entdecke neue Bücher</MudText>
 
-<AuthorizeView>
-    <Authorized>
-        @foreach (var claim in context.User.Claims)
+@if (Recommended != null && Recommended.Items.Count > 0)
+{
+    <MudGrid Justify="Justify.Center" Spacing="3">
+        @foreach (var reco in Recommended.Items)
         {
-            <MudText>@claim.Type | @claim.Value</MudText>
+            <MudItem>
+                <MudImage Elevation="1" ObjectFit="ObjectFit.Cover" ObjectPosition="ObjectPosition.Center" Src="@reco.VolumeInfo.ImageLinks.Thumbnail" Width="128"></MudImage>
+            </MudItem>
         }
-        
-        <MudButton OnClick="LoadRecommended">Lade Recommended</MudButton>
-    </Authorized>
-</AuthorizeView>
+    </MudGrid>
 
-<MudGrid Spacing="2" Justify="Justify.Center">
-    @if (Books != null && Books.TotalItems > 0)
-    {
-        @foreach (var book in Books.Items)
-        {
-            <MudCard>
-                <MudCardMedia Image="@book.VolumeInfo.ImageLinks.Thumbnail"/>
-                <MudCardContent>
-                    <MudText Typo="Typo.h6">@book.VolumeInfo.Title</MudText>
-                </MudCardContent>
-                <MudCardActions>
-                    <MudButton StartIcon="@Icons.Material.Filled.Info" Variant="Variant.Text" Color="Color.Primary">Infos</MudButton>
-                </MudCardActions>
-            </MudCard>
-        }
-    }
-    
-</MudGrid>
+}
+else
+{
+    <MudGrid Justify="Justify.Center" Spacing="3">
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+        <MudSkeleton Animation="Animation.Pulse" SkeletonType="SkeletonType.Rectangle" Width="128" Height="195px" />
+    </MudGrid>
+}
 
-@code{
+@code {
 
     public Volumes? Recommended { get; set; }
 
-
     protected override async Task OnInitializedAsync()
     {
-            
+        Thread.Sleep(2000);
+        Recommended = await BookService.Volumes.Recommended.List().ExecuteAsync().ConfigureAwait(false);
     }
-
-    public Volumes? Books { get; set; }
-
-    private async Task LoadRecommended()
-    {
-        Recommended = await BookService.Volumes.Recommended.List().ExecuteAsync();
-    }
-
 }
