--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,31 +1,29 @@
 ﻿@inherits LayoutComponentBase
 
-<MudThemeProvider @bind-IsDarkMode="_isDarkMode" @ref="_themeProvider" />
-<MudDialogProvider />
-<MudSnackbarProvider />
+
+<MudThemeProvider @bind-IsDarkMode="_isDarkMode" @ref="_themeProvider" Theme="MyBooksTheme"/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
 
 <MudLayout>
-    <MudAppBar Elevation="0">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        <MudSpacer />
-        <MudIconButton OnClick="() => _isDarkMode = !_isDarkMode" Icon="@(_isDarkMode ? Icons.Material.Filled.LightMode : Icons.Material.Filled.DarkMode)"></MudIconButton>
+    <MudAppBar Bottom="true" Fixed="true" Elevation="1">
+        <MudSpacer/>
+        <MudIconButton Href="/" Icon="@Icons.Material.Filled.House"/>
+        <MudIconButton Href="/searchbooks" Icon="@Icons.Material.Filled.Search"/>
         <AuthorizeView>
             <Authorized>
-                <MudAvatar Size="Size.Medium"><MudImage Alt="@context.User.Claims.FirstOrDefault(c => c.Type.Contains("givenname")).Value" Src="@context.User.Claims.FirstOrDefault(c => c.Type == "picture").Value"></MudImage></MudAvatar>
+                <MudAvatar Size="Size.Medium">
+                    <MudImage Alt="@context.User.Claims.FirstOrDefault(c => c.Type.Contains("givenname")).Value" Src="@context.User.Claims.FirstOrDefault(c => c.Type == "picture").Value"></MudImage>
+                </MudAvatar>
             </Authorized>
             <NotAuthorized>
-                <MudIconButton Title="Login mit Google" Href="/auth/google-login" Icon="@Icons.Custom.Brands.Google" />
+                <MudIconButton Title="Login mit Google" Href="/auth/google-login" Icon="@Icons.Custom.Brands.Google"/>
             </NotAuthorized>
         </AuthorizeView>
-        </MudAppBar>
-    <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
-        <MudDrawerHeader>
-            <MudText Typo="Typo.h6">MyBooks</MudText>
-        </MudDrawerHeader>
-        <NavMenu />
-    </MudDrawer>
-    <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Large" Class="pt-4">
+        <MudSpacer/>
+    </MudAppBar>
+    <MudMainContent Style="padding-top: 14px; padding-bottom: calc((var(--mud-appbar-height) - var(--mud-appbar-height)/8) + 8px);">
+        <MudContainer>
             <AuthorizeView>
                 <Authorized>
                     @Body
@@ -39,9 +37,9 @@
 </MudLayout>
 
 @code {
-    bool _drawerOpen = true;
     bool _isDarkMode;
     private MudThemeProvider _themeProvider;
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -51,9 +49,21 @@
         }
     }
 
-    void DrawerToggle()
+    public readonly MudTheme MyBooksTheme = new()
     {
-        _drawerOpen = !_drawerOpen;
-    }
+        Palette = new PaletteLight
+        {
+            Primary = Colors.Purple.Lighten4,
+            Secondary = Colors.Pink.Lighten4,
+            AppbarBackground = Colors.Purple.Lighten4
+        },
+        PaletteDark = new PaletteDark
+        {
+            Primary = Colors.Purple.Lighten4,
+            Secondary = Colors.Pink.Lighten4,
+            AppbarBackground = Colors.Purple.Darken4
+        }
+    };
+
 
 }
