--- a/Components/BookComponent.razor
+++ b/Components/BookComponent.razor
@@ -19,9 +19,9 @@
             </MudItem>
             <MudItem xs="8">
                 <MudStack>
-                    <MudText Typo="Typo.h6">@Book.VolumeInfo?.Title</MudText>
-                    <MudText Typo="Typo.body2">Von: @(Book?.VolumeInfo?.Authors != null ? string.Join(", ", Book?.VolumeInfo?.Authors) : "Unbekannt")</MudText>
-                    <MudText Typo="Typo.body2">Vom: @(Book?.VolumeInfo?.PublishedDate)</MudText>
+                    <MudText Typo="Typo.body1"><b>@Book.VolumeInfo?.Title</b></MudText>
+                    <MudText Typo="Typo.caption">Von: @(Book?.VolumeInfo?.Authors != null ? string.Join(", ", Book?.VolumeInfo?.Authors) : "Unbekannt")</MudText>
+                    <MudText Typo="Typo.caption">Vom: @(Book?.VolumeInfo?.PublishedDate)</MudText>
                 </MudStack>
             </MudItem>
         </MudGrid>
